# grok-search-new

./: .gitignore  CHANGELOG.md  README.md  REFACTOR_PLAN.md  SKILL.md  grok_search.py  install.sh  pyproject.toml
grok_search/: __init__.py  __main__.py  cli.py  config.py  logger.py  service.py  skill_installer.py  sources.py  utils.py
grok_search/assets/skills/grok-search-cli/references/: cli-contract.md
grok_search/assets/skills/smart-search-cli/: SKILL.md
grok_search/providers/: anysearch.py  context7.py  openai_compatible.py  xai_responses.py
smart_search/: cli.py  config.py  logger.py  service.py  skill_installer.py
smart_search/providers/: __init__.py  context7.py  exa.py  openai_compatible.py  xai_responses.py  zhipu.py
src/: grok_search.py
