[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grok-search"
version = "0.1.0"
description = "AI-agent web research CLI — Grok sub-agent search + multi-source supplementation (Brave/Baidu/News/Serper/Tavily)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.0",
    "rich>=13.9,<16",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["smart_search*", "smart_search.providers*"]

[tool.setuptools.package-data]
smart_search = [
    "assets/skills/smart-search-cli/SKILL.md",
    "assets/skills/smart-search-cli/agents/*.yaml",
    "assets/skills/smart-search-cli/references/*.md",
]

[project.scripts]
grok-search = "grok_search:main"